section gap fix

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -15,6 +15,7 @@
   }
 }
 .article-content > * + * {
+  margin-top:var(--section-gap);
   font-size: var(--content-font-size);
 }
 
